--- a/output/tables/did_table.tex
+++ b/output/tables/did_table.tex
@@ -5,9 +5,9 @@
 \hline
  & Log Scale \\
 \hline
-Point Estimate ($\hat{\gamma}$) & $-0.0066$ \\
-Standard Error & $0.0056$ \\
-95\% CI & $[-0.0175, \; 0.0043]$ \\
+Point Estimate ($\hat{\gamma}$) & $-0.0066$ & $0.9934$ \\
+Standard Error & $0.0056$ & --- \\
+95\% CI & $[-0.0175, \; 0.0043]$ & $[0.9827, \; 1.0043]$ \\
 \hline
 \end{tabular}
 \label{tab:did}
